# 8puzzle

./: .gitignore  CMakeLists.txt  README.md
src/: Board.cpp  Output.cpp  SearchNode.cpp  Solver.cpp  main.cpp
src/Fringe/: AStarFringe.cpp  BFSFringe.cpp  DFSFringe.cpp  Fringe.cpp
src/FringePolicy/: AStarEucFringePolicy.cpp  AStarManFringePolicy.cpp  AStarMisplacedFringePolicy.cpp  BFSFringePolicy.cpp  DFSFringePolicy.cpp
src/include/: Board.h  Output.h  SearchNode.h  Solver.h
src/include/Fringe/: AStarFringe.h  BFSFringe.h  DFSFringe.h  Fringe.h
src/include/FringePolicy/: AStarEucFringePolicy.h  AStarManFringePolicy.h  AStarMisplacedFringePolicy.h  BFSFringePolicy.h  DFSFringePolicy.h  FringePolicy.h
test/: CMakeLists.txt  test_AStarFringe.cpp
